--- a/.github/workflows/run-static-analysis.yml
+++ b/.github/workflows/run-static-analysis.yml
@@ -13,7 +13,7 @@ jobs:
 
         steps:
             - uses: actions/checkout@v2
-              
+
             - name: Setup PHP
               uses: shivammathur/setup-php@v2
               with:
@@ -22,7 +22,7 @@ jobs:
                 extensions: pdo_sqlite
 
             - name: Install dependencies
-              run: composer install --prefer-dist --no-progress --no-suggest
+              run: composer install --prefer-dist --no-progress --no-suggest --no-interaction
 
             - name: Analyze
               run: composer analyze
