--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -43,8 +43,8 @@ jobs:
       run: |
         composer remove vimeo/psalm --no-update --dev
         composer remove friendsofphp/php-cs-fixer --no-update --dev
-        composer require "laravel/framework:${{ matrix.laravel }}" --no-update --no-progress
-        composer update --${{ matrix.dependency-version }} --prefer-dist --no-progress
+        composer require "laravel/framework:${{ matrix.laravel }}" --no-update --no-progress --no-interaction
+        composer update --${{ matrix.dependency-version }} --prefer-dist --no-progress --no-interaction
 
     - name: Execute Unit Tests
       run: composer test-ci
